# brutos

./: .gitignore  Cargo.toml  Makefile  README  x86_64-unknown-brutos-kernel.json
alloc/: Cargo.toml
alloc/src/: arc.rs  boxed.rs  lib.rs  unique.rs
bootstrap/: Cargo.toml
bootstrap/src/: main.rs
cpio/: Cargo.toml
cpio/src/: lib.rs
elf/: Cargo.toml
elf/src/: lib.rs
init/: Cargo.toml
init/src/: main.rs
kernel/: Cargo.toml  x86_64.lds
kernel/src/: bootstrap.rs  init.rs  main.rs  memory.rs  panic.rs  syscall.rs  task.rs
kernel/src/arch/x86_64/: entry.rs  framebuffer.rs  memory.rs  mod.rs  page_tables.py  panic.rs  syscall.rs
kernel/src/arch/x86_64/interrupt/: entry.py  entry.rs  handlers.py  handlers.rs  mod.rs
kernel/src/memory/: addr_space.rs  alloc.rs  mod.rs
memory/: Cargo.toml
memory/defs/: Cargo.toml
memory/mmu/: Cargo.toml
memory/mmu/src/arch/: x86_64.rs
memory/phys-alloc/: Cargo.toml
memory/phys-alloc/src/: bootstrap.rs  lib.rs
memory/slab-alloc/: Cargo.toml
memory/slab-alloc/src/: lib.rs
memory/src/: lib.rs  slab_alloc.rs  unit.rs
memory/src/phys_alloc/: bootstrap.rs  mod.rs
memory/src/vm/: mappings.rs  mod.rs
memory/src/vm/mmu/: mod.rs
memory/src/vm/mmu/arch/: x86_64.rs
memory/traits/: Cargo.toml
memory/traits/src/: lib.rs
memory/units/: Cargo.toml
memory/units/src/: lib.rs
memory/units/src/arch/: x86_64.rs
memory/vm/: Cargo.toml
memory/vm/src/: lib.rs  mappings.rs
memory/vm/src/mmu/: mod.rs
memory/vm/src/mmu/arch/: x86_64.rs
mmu/: Cargo.toml
mmu/src/arch/: x86_64.rs
multiboot2/: Cargo.toml
multiboot2/src/: ffi.rs  lib.rs
phys-alloc/: Cargo.toml
phys-alloc/src/: bootstrap.rs  lib.rs
platform/pc/: Cargo.toml
platform/pc/src/: apic.rs  cpuid.rs  fb.rs  gdt.rs  io.rs  lib.rs  mmu.rs  msr.rs  tss.rs
platform/pc/src/interrupt/: apic.rs  idt.rs  mod.rs
sync/: Cargo.toml
sync/src/: condvar.rs  lib.rs  mpsc.rs  mutex.rs  spinlock.rs  waitq.rs
syscall/: Cargo.toml
syscall/src/: lib.rs  sugar.rs
syscall/src/arch/: x86_64.rs
task/: Cargo.toml
task/src/: lib.rs  sched.rs
task/src/arch/: x86_64.rs
util/: Cargo.toml
util/macros/: Cargo.toml
util/macros/src/: bitenum.rs  bitfield.rs  convert_inner.rs  lib.rs  selector.rs
util/macros/src/bitfield/: mod.rs  output.rs  parse.rs
util/src/: byte_stream.rs  iter.rs  lib.rs  linked_list.rs  macros.rs  pointer.rs  uint.rs
vm-trans/: Cargo.toml
vm-trans/src/: lib.rs
vm-trans/src/arch/: x86_64.rs
