[package]
name = "brutos-kernel"
version = "0.1.0"
authors = ["Alistair Geesing <alistair.geesing@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brutos-alloc = { path = "../alloc" }
brutos-memory = { path = "../memory" }
brutos-multiboot2 = { path = "../multiboot2" }
brutos-platform-pc = { path = "../platform/pc" }
brutos-task = { path = "../task" }
brutos-sync = { path = "../sync" }
