[package]
name = "brutos-kernel"
version = "0.1.0"
authors = ["Alistair Geesing <alistair.geesing@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brutos-alloc = { path = "../alloc" }
brutos-cpio = { path = "../cpio" }
brutos-elf = { path = "../elf" }
brutos-memory-phys-alloc = { path = "../memory/phys-alloc" }
brutos-memory-slab-alloc = { path = "../memory/slab-alloc" }
brutos-memory-traits = { path = "../memory/traits" }
brutos-memory-units = { path = "../memory/units" }
brutos-memory-vm = { path = "../memory/vm" }
brutos-multiboot2 = { path = "../multiboot2" }
brutos-platform-pc = { path = "../platform/pc" }
brutos-task = { path = "../task" }
brutos-sync = { path = "../sync" }
brutos-syscall = { path = "../syscall" }
brutos-util = { path = "../util" }

bitbash = { version = "0.2.0", features = ["const"] }

[[bin]]
name = "brutos-kernel"
test = false
