[package]
name = "brutos-phys-alloc"
version = "0.1.0"
authors = ["alistair"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = ["brutos-util/std"]

[dependencies]
brutos-util = { path = "../util" }
brutos-memory = { path = "../memory" }

[dev-dependencies]
rand = "0.7.2"
