[package]
name = "brutos-task"
version = "0.1.0"
authors = ["Alistair Geesing <alistair.geesing@icloud.com>"]
edition = "2018"

[features]
default = ["user-mode"]
std = []
user-mode = []

[dependencies]
brutos-alloc = { path = "../alloc" }
brutos-memory-units = { path = "../memory/units" }
brutos-platform-pc = { path = "../platform/pc" }
brutos-sync = { path = "../sync" }
brutos-util = { path = "../util" }
