[package]
name = "brutos-vm-trans"
version = "0.1.0"
authors = ["Alistair Geesing <alistair.geesing@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = ["brutos-util/std"]

[dependencies]
brutos-memory = { path = "../memory" }
brutos-util = { path = "../util" }
