[package]
name = "brutos-memory-phys-alloc"
version = "0.1.0"
authors = ["Alistair Geesing <alistair.geesing@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
std = ["brutos-util/std"]

[dependencies]
brutos-util = { path = "../../util" }
brutos-memory-defs = { path = "../defs" }

[dev-dependencies]
rand = "0.7.2"
