[package]
name = "brutos-memory-phys-alloc"
version = "0.1.0"
authors = ["Alistair Geesing <alistair.geesing@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brutos-memory-units = { path = "../units" }
brutos-util = { path = "../../util" }
brutos-util-macros = { path = "../../util/macros" }

[dev-dependencies]
rand = "0.7.3"

[features]
std = ["brutos-memory-units/std", "brutos-util/std"]
