[package]
name = "brutos-memory-slab-alloc"
version = "0.1.0"
authors = ["Alistair Geesing <alistair.geesing@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brutos-alloc = { path = "../../alloc" }
brutos-memory-traits = { path = "../traits" }
brutos-memory-units = { path = "../units" }
brutos-util = { path = "../../util" }

[dev-dependencies]
rand = "0.7.3"

[features]
std = ["brutos-alloc/std", "brutos-memory-traits/std", "brutos-memory-units/std", "brutos-util/std"]
