[package]
name = "brutos-memory-traits"
version = "0.1.0"
authors = ["Alistair Geesing <alistair.geesing@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brutos-memory-units = { path = "../units" }

[features]
std = ["brutos-memory-units/std"]
