[package]
name = "brutos-platform-pc"
version = "0.1.0"
authors = ["Alistair Geesing <alistair.geesing@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brutos-alloc = { path = "../../alloc" }
brutos-memory-units = { path = "../../memory/units" }
brutos-util = { path = "../../util" }
brutos-util-macros = { path = "../../util/macros" }
